fix paragraph spacing

--- a/source/buttons.css
+++ b/source/buttons.css
@@ -1,5 +1,5 @@
 .bar a.btn {
-  border: 1px solid rgba(204, 204, 204, 0.39);
+  border: 1px solid #c8cac8;
   border-radius: 4px;
   padding: 5px 14px;
   font-size: 12px;
